--- a/manifest.json
+++ b/manifest.json
@@ -10,69 +10,52 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "./others/android-icon-192x192-dunplab-manifest-14216.png",
+            "src": "./others/android-icon-36x36.png",
+            "sizes": "36x36",
             "type": "image/png",
-            "sizes": "192x192"
+            "density": "0.75"
         },
         {
-            "src": "./others/apple-icon-180x180-dunplab-manifest-14216.png",
+            "src": "./others/android-icon-48x48.png",
+            "sizes": "48x48",
             "type": "image/png",
-            "sizes": "180x180"
+            "density": "1.0"
         },
         {
-            "src": "./others/apple-icon-152x152-dunplab-manifest-14216.png",
+            "src": "./others/android-icon-72x72.png",
+            "sizes": "72x72",
             "type": "image/png",
-            "sizes": "152x152"
+            "density": "1.5"
         },
         {
-            "src": "./others/apple-icon-114x114-dunplab-manifest-14516.png",
+            "src": "./others/android-icon-96x96.png",
+            "sizes": "96x96",
             "type": "image/png",
-            "sizes": "144x144"
+            "density": "2.0"
         },
         {
-            "src": "./others/apple-icon-120x120-dunplab-manifest-14516.png",
+            "src": "./others/android-icon-144x144.png",
+            "sizes": "144x144",
             "type": "image/png",
-            "sizes": "120x120"
+            "density": "3.0"
         },
         {
-            "src": "./others/apple-icon-114x114-dunplab-manifest-14216.png",
+            "src": "./others/android-icon-192x192.png",
+            "sizes": "192x192",
             "type": "image/png",
-            "sizes": "114x114"
+            "density": "4.0"
         },
         {
-            "src": "./others/favicon-96x96-dunplab-manifest-14216.png",
+            "src": "./others/android-chrome-512x512.png",
+            "sizes": "512x512",
             "type": "image/png",
-            "sizes": "96x96"
+            "density": "4.0"
         },
         {
-            "src": "./others/apple-icon-76x76-dunplab-manifest-14216.png",
+            "src": "./others/maskable_icon_2.png",
+            "sizes": "1024x1024",
             "type": "image/png",
-            "sizes": "76x76"
-        },
-        {
-            "src": "./others/apple-icon-72x72-dunplab-manifest-14516.png",
-            "type": "image/png",
-            "sizes": "72x72"
-        },
-        {
-            "src": "./others/apple-icon-60x60-dunplab-manifest-14216.png",
-            "type": "image/png",
-            "sizes": "60x60"
-        },
-        {
-            "src": "./others/apple-icon-57x57-dunplab-manifest-14216.png",
-            "type": "image/png",
-            "sizes": "57x57"
-        },
-        {
-            "src": "./others/favicon-32x32-dunplab-manifest-14216.png",
-            "type": "image/png",
-            "sizes": "32x32"
-        },
-        {
-            "src": "./others/favicon-16x16-dunplab-manifest-14216.png",
-            "type": "image/png",
-            "sizes": "16x16"
+            "purpose": "maskable"
         }
     ]
 }
